force-app/main/default/objects/JsonApiResource__mdt/JsonApiResource__mdt.object-meta.xml
<CustomObject>
    <label>JSON:API Resource</label>
    <pluralLabel>JSON:API Resources</pluralLabel>
</CustomObject>