force-app/main/default/objects/JsonApiResource__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <description>API name of the Apex class that extends JsonApiResourceConfig for this resource (e.g. AccountResourceConfig).</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>