force-app/main/default/objects/JsonApiResource__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>When unchecked, this resource is not registered (lets you disable an endpoint without deleting the record).</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>