force-app/main/default/objects/JsonApiResource__mdt/fields/Versions__c.field-meta.xml
<CustomField>
    <fullName>Versions__c</fullName>
    <label>Versions</label>
    <description>Comma-separated API versions this resource is exposed under (e.g. "v1,v2"). The config is registered once per version. Leave blank to use the config's getVersion() (which defaults to v1).</description>
    <inlineHelpText>Comma-separated list, e.g. v1,v2. Blank = the config's getVersion() default.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>